browser changed to chrome

--- a/i2o_Sound_United_Automation/test-output/index.html
+++ b/i2o_Sound_United_Automation/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-i2o_Sound_united_Automation">
-                    <span>C:\Ankit-WorkArea-Automation\SeleniumWorkSpace\i2o_Sound_United_Auomation\TestNG.xml</span>
+                    <span>C:\Ankit-WorkArea-Automation\GitWorkspace_SU\i2o_Sound_United_Automation\TestNG.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -207,7 +207,7 @@
         </div> <!-- panel i2o_Sound_united_Automation -->
         <div panel-name="test-xml-i2o_Sound_united_Automation" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Ankit-WorkArea-Automation\SeleniumWorkSpace\i2o_Sound_United_Auomation\TestNG.xml</span>
+            <span class="header-content">C:\Ankit-WorkArea-Automation\GitWorkspace_SU\i2o_Sound_United_Automation\TestNG.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -258,33 +258,33 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(7);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'ValidateSalesAnalysis')
+data.setCell(0, 1, 'ValidateHomepage')
 data.setCell(0, 2, 'com.Su.Testcases.i20ApplicationSanityTest')
-data.setCell(0, 3, 26504);
+data.setCell(0, 3, 23731);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'ValidateHomepage')
+data.setCell(1, 1, 'ValidateSalesAnalysis')
 data.setCell(1, 2, 'com.Su.Testcases.i20ApplicationSanityTest')
-data.setCell(1, 3, 18995);
+data.setCell(1, 3, 20606);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'ValidateResellermgmt')
 data.setCell(2, 2, 'com.Su.Testcases.i20ApplicationSanityTest')
-data.setCell(2, 3, 13798);
+data.setCell(2, 3, 15041);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'Validatedetailreports')
+data.setCell(3, 1, 'ValidatepriceMonitor')
 data.setCell(3, 2, 'com.Su.Testcases.i20ApplicationSanityTest')
-data.setCell(3, 3, 10783);
+data.setCell(3, 3, 14745);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'ValidatepriceMonitor')
+data.setCell(4, 1, 'Validatedetailreports')
 data.setCell(4, 2, 'com.Su.Testcases.i20ApplicationSanityTest')
-data.setCell(4, 3, 10169);
+data.setCell(4, 3, 8272);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'ValidateBCM')
+data.setCell(5, 1, 'ValidateA$E')
 data.setCell(5, 2, 'com.Su.Testcases.i20ApplicationSanityTest')
-data.setCell(5, 3, 8778);
+data.setCell(5, 3, 7406);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'ValidateA$E')
+data.setCell(6, 1, 'ValidateBCM')
 data.setCell(6, 2, 'com.Su.Testcases.i20ApplicationSanityTest')
-data.setCell(6, 3, 7972);
+data.setCell(6, 3, 5612);
 window.suiteTableData['i2o_Sound_united_Automation']= { tableData: data, tableDiv: 'times-div-i2o_Sound_united_Automation'}
 return data;
 }
@@ -322,35 +322,35 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">ValidateHomepage</span>
-                <span class="method-start">69392 ms</span>
+                <span class="method-start">87007 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateSalesAnalysis</span>
-                <span class="method-start">88401 ms</span>
+                <span class="method-start">110749 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateA$E</span>
-                <span class="method-start">114920 ms</span>
+                <span class="method-start">131356 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidatepriceMonitor</span>
-                <span class="method-start">122894 ms</span>
+                <span class="method-start">138766 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateResellermgmt</span>
-                <span class="method-start">133067 ms</span>
+                <span class="method-start">153513 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateBCM</span>
-                <span class="method-start">146868 ms</span>
+                <span class="method-start">168556 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Validatedetailreports</span>
-                <span class="method-start">155648 ms</span>
+                <span class="method-start">174170 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">closedriver</span>
-                <span class="method-start">166432 ms</span>
+                <span class="method-start">182443 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
