--- a/i2o_Sound_United_Automation/test-output/old/Default suite/methods-alphabetical.html
+++ b/i2o_Sound_United_Automation/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="638263">  <td>20/04/17 22:55:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="i20ApplicationSanityTest.ValidateA$E()[pri:3, instance:com.Su.Testcases.i20ApplicationSanityTest@a67c67e]">ValidateA$E</td> 
-  <td>main@660143728</td>   <td></td> </tr>
-<tr bgcolor="638263">  <td>20/04/17 22:55:34</td>   <td>26203</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="i20ApplicationSanityTest.ValidateBCM()[pri:6, instance:com.Su.Testcases.i20ApplicationSanityTest@a67c67e]">ValidateBCM</td> 
-  <td>main@660143728</td>   <td></td> </tr>
-<tr bgcolor="638263">  <td>20/04/17 22:54:24</td>   <td>-43666</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="i20ApplicationSanityTest.ValidateHomepage()[pri:1, instance:com.Su.Testcases.i20ApplicationSanityTest@a67c67e]">ValidateHomepage</td> 
-  <td>main@660143728</td>   <td></td> </tr>
-<tr bgcolor="638263">  <td>20/04/17 22:55:24</td>   <td>15640</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="i20ApplicationSanityTest.ValidateResellermgmt()[pri:5, instance:com.Su.Testcases.i20ApplicationSanityTest@a67c67e]">ValidateResellermgmt</td> 
-  <td>main@660143728</td>   <td></td> </tr>
-<tr bgcolor="638263">  <td>20/04/17 22:54:43</td>   <td>-25172</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="i20ApplicationSanityTest.ValidateSalesAnalysis()[pri:2, instance:com.Su.Testcases.i20ApplicationSanityTest@a67c67e]">ValidateSalesAnalysis</td> 
-  <td>main@660143728</td>   <td></td> </tr>
-<tr bgcolor="638263">  <td>20/04/17 22:55:40</td>   <td>32421</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="i20ApplicationSanityTest.Validatedetailreports()[pri:7, instance:com.Su.Testcases.i20ApplicationSanityTest@a67c67e]">Validatedetailreports</td> 
-  <td>main@660143728</td>   <td></td> </tr>
-<tr bgcolor="638263">  <td>20/04/17 22:55:14</td>   <td>6403</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="i20ApplicationSanityTest.ValidatepriceMonitor()[pri:4, instance:com.Su.Testcases.i20ApplicationSanityTest@a67c67e]">ValidatepriceMonitor</td> 
-  <td>main@660143728</td>   <td></td> </tr>
-<tr bgcolor="638263">  <td>20/04/17 22:55:49</td>   <td>41266</td> <td>&nbsp;</td><td title="&lt;&lt;i20ApplicationSanityTest.closedriver()[pri:0, instance:com.Su.Testcases.i20ApplicationSanityTest@a67c67e]">&lt;&lt;closedriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@660143728</td>   <td></td> </tr>
-<tr bgcolor="638263">  <td>20/04/17 22:50:11</td>   <td>-296523</td> <td>&nbsp;</td><td title="&gt;&gt;i20ApplicationSanityTest.go()[pri:0, instance:com.Su.Testcases.i20ApplicationSanityTest@a67c67e]">&gt;&gt;go</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@660143728</td>   <td></td> </tr>
+<tr bgcolor="d56d67">  <td>20/04/19 19:24:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataValidation.f()[pri:0, instance:com.Su.Testcases.DataValidation@64bf3bbf]">f</td> 
+  <td>main@1354011814</td>   <td></td> </tr>
 </table>
