--- a/i2o_Sound_United_Automation/test-output/emailable-report.html
+++ b/i2o_Sound_United_Automation/test-output/emailable-report.html
@@ -8,17 +8,12 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">i2o Sound united Automation</th></tr>
-<tr><td><a href="#t0">i2o SU Sanity testing</a></td><td class="num">7</td><td class="num">0</td><td class="num">0</td><td class="num">183,275</td><td></td><td></td></tr>
+<tr><th colspan="7">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">18,250</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">i2o Sound united Automation</th></tr></tbody><tbody id="t0"><tr><th colspan="4">i2o SU Sanity testing &#8212; passed</th></tr><tr class="passedeven"><td rowspan="7">com.Su.Testcases.i20ApplicationSanityTest</td><td><a href="#m0">ValidateA$E</a></td><td rowspan="1">1587305668466</td><td rowspan="1">7406</td></tr><tr class="passedeven"><td><a href="#m1">ValidateBCM</a></td><td rowspan="1">1587305705666</td><td rowspan="1">5612</td></tr><tr class="passedeven"><td><a href="#m2">ValidateHomepage</a></td><td rowspan="1">1587305624117</td><td rowspan="1">23731</td></tr><tr class="passedeven"><td><a href="#m3">ValidateResellermgmt</a></td><td rowspan="1">1587305690623</td><td rowspan="1">15041</td></tr><tr class="passedeven"><td><a href="#m4">ValidateSalesAnalysis</a></td><td rowspan="1">1587305647859</td><td rowspan="1">20606</td></tr><tr class="passedeven"><td><a href="#m5">Validatedetailreports</a></td><td rowspan="1">1587305711280</td><td rowspan="1">8272</td></tr><tr class="passedeven"><td><a href="#m6">ValidatepriceMonitor</a></td><td rowspan="1">1587305675876</td><td rowspan="1">14745</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.Su.Testcases.Mart_Testcases</td><td><a href="#m0">Validatecogs</a></td><td rowspan="1">1589205743820</td><td rowspan="1">11000</td></tr><tr class="passedeven"><td><a href="#m1">Validatedshippedunits</a></td><td rowspan="1">1589205754828</td><td rowspan="1">7197</td></tr></tbody>
 </table>
-<h2>i2o SU Sanity testing</h2><h3 id="m0">com.Su.Testcases.i20ApplicationSanityTest#ValidateA$E</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.Su.Testcases.i20ApplicationSanityTest#ValidateBCM</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.Su.Testcases.i20ApplicationSanityTest#ValidateHomepage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.Su.Testcases.i20ApplicationSanityTest#ValidateResellermgmt</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.Su.Testcases.i20ApplicationSanityTest#ValidateSalesAnalysis</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.Su.Testcases.i20ApplicationSanityTest#Validatedetailreports</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">com.Su.Testcases.i20ApplicationSanityTest#ValidatepriceMonitor</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.Su.Testcases.Mart_Testcases#Validatecogs</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.Su.Testcases.Mart_Testcases#Validatedshippedunits</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
