--- a/i2o_Sound_United_Automation/test-output/old/Default suite/methods.html
+++ b/i2o_Sound_United_Automation/test-output/old/Default suite/methods.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d56d67">  <td>20/04/19 19:24:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataValidation.f()[pri:0, instance:com.Su.Testcases.DataValidation@64bf3bbf]">f</td> 
-  <td>main@1354011814</td>   <td></td> </tr>
+<tr bgcolor="d56d67">  <td>20/05/11 19:32:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mart_Testcases.Validatecogs()[pri:1, instance:com.Su.Testcases.Mart_Testcases@5ce81285]">Validatecogs</td> 
+  <td>main@1816757085</td>   <td></td> </tr>
+<tr bgcolor="d56d67">  <td>20/05/11 19:32:34</td>   <td>11009</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mart_Testcases.Validatedshippedunits()[pri:2, instance:com.Su.Testcases.Mart_Testcases@5ce81285]">Validatedshippedunits</td> 
+  <td>main@1816757085</td>   <td></td> </tr>
 </table>
